# VarSolver

./: .gitignore  CMakeLists.txt  README.md  Solver.cpp  Solver.h  logging.h  main.cpp
